[package]
name = "token_program"
version = "0.1.0"
edition = "2021"

[lib]
name = "token_program"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.18.17"
borsh = "0.9.1"

[dev-dependencies]
solana-program-test = "1.18.17"
tokio = { version = "1.8", features = ["full"] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"